--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ venv
 *.pyc
 __pycache__/
 local_settings.py
-#db.sqlite3
+db.sqlite3
 media
 # Ignore Django Migrations in Development if you are working on team
 # Only for Development only
